# agrocrypto-core

./: .gitattributes  .gitignore  Cargo.toml  ESG Manifest  README.md
.github/: FUNDING.yml
agrocrypto-core/: Cargo.toml  lib.rs
agrocrypto-core/src/: lib.rs
docs/: AI_MODULES.md  TOKENIZATION_OVERVIEW.md  TRUST_FRAMEWORK.md
